--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   </head>
   <body>
     <div class="container">
-      <div class="top">
+      <div class="center_box top">
         <h1 class="logo">Galaxy</h1>
         <ul class="nav">
-          <li><a href="#x">홈</a></li>
+          <li><a href="#x" class="on">홈</a></li>
           <li><a href="#x">스마트폰</a></li>
           <li><a href="#x">태블릿</a></li>
           <li><a href="#x">워치</a></li>
@@ -32,7 +32,7 @@
       </div>
 
       <div class="slide">
-        <div class="inner">
+        <div class="center_box inner">
           <div class="slide_text">
             <h2>Galaxy tab7 5G<br />런칭 이벤트</h2>
             <div class="slide_btns">
@@ -43,7 +43,7 @@
         </div>
       </div>
 
-      <div class="section">
+      <div class="center_box">
         <ul class="product_01">
           <li>
             <div class="photo">
@@ -82,7 +82,7 @@
       </div>
 
       <div class="banner">
-        <div class="banner_text">
+        <div class="center_box banner_text">
           <h2>갤럭시 핏</h2>
           <p>
             수면, 심박수, 스트레스 등 다양한 데이터를 쉽게 확인하고<br />
@@ -92,8 +92,8 @@
         </div>
       </div>
 
-      <div class="section">
-         <div class="product_03">
+      <div class="center_box">
+        <div class="product_03">
           <div class="titles">
             <h3>찾고있는 Galaxy가 있나요?</h3>
             <p>당신에게 꼭 맞는 갤럭시는?</p>
@@ -103,63 +103,77 @@
             <li><img src="images/watch-ov.png" alt="" /></li>
             <li><img src="images/note-ov.png" alt="" /></li>
             <li><img src="images/watch.png" alt="" /></li>
+            <li><img src="images/buds.png" alt="" /></li>
             <li><img src="images/watch.png" alt="" /></li>
-            <li><img src="images/watch.png" alt="" /></li>
-            <li><img src="images/watch.png" alt="" /></li>
-            <li><img src="images/watch.png" alt="" /></li>
+            <li><img src="images/note.png" alt="" /></li>
+            <li><img src="images/watch-ov.png" alt="" /></li>
           </ul>
         </div>
 
-         <div class="product_04">
+        <div class="product_04">
           <div class="titles">
-            <h3>5G와  함께하는 삶</h3>
+            <h3>5G와 함께하는 삶</h3>
             <p>당신의 삶을 변화시킬 5G</p>
           </div>
           <ul class="items">
             <li></li>
             <li></li>
             <li></li>
-        
+          </ul>
         </div>
       </div>
-      </div>
-      
+
       <div class="bottom">
-        <div class="footer">
-            <div class="footer_info">
-                <h1 class="footer_logo">Galaxy</h1>
-            </div>
-            <ul class="footer_menu">
-                <li>
-                    <a href="#x">기업정보</a>
-                    <ul>
-                        <li><a href="#x">회사소개</a></li>
-                        <li><a href="#x">공지사항</a></li>
-                        <li><a href="#x">제품 접근성</a></li>
-                    </ul>
-                </li>
-                  <li>
-                    <a href="#x">고객문의</a>
-                    <ul>
-                        <li><a href="#x">서비스 센터 찾기</a></li>
-                        <li><a href="#x">디지털프라자</a></li>
-                        <li><a href="#x">이메일 상담</a></li>
-                        <li><a href="#x">FAQ</a></li>
-                    </ul>
-                </li>
-                  <li>
-                    <a href="#x">제품소개</a>
-                    <ul>
-                        <li><a href="#x">스마트폰</a></li>
-                        <li><a href="#x">태블릿</a></li>
-                        <li><a href="#x">워치</a></li>
-                        <li><a href="#x">버즈</a></li>
-                    </ul>
-                </li>
+        <div class="center_box footer">
+          <div class="footer_info">
+            <h1 class="footer_logo">Galaxy</h1>
+            <p>
+              우리가 제공하는 앱을 다운로드 해 보세요.<br />갤러시의 새로운
+              소식을 빠르고 간편하게 확인 할 수 있습니다.
+            </p>
+            <ul>
+              <li>
+                <a href="#x"><i class="xi-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#x"><i class="xi-facebook"></i></a>
+              </li>
+              <li>
+                <a href="#x"><i class="xi-linkedin"></i></a>
+              </li>
             </ul>
+          </div>
+          <ul class="footer_menu">
+            <li>
+              <a href="#x">기업정보</a>
+              <ul>
+                <li><a href="#x">회사소개</a></li>
+                <li><a href="#x">공지사항</a></li>
+                <li><a href="#x">제품 접근성</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#x">고객문의</a>
+              <ul>
+                <li><a href="#x">서비스 센터 찾기</a></li>
+                <li><a href="#x">디지털프라자</a></li>
+                <li><a href="#x">이메일 상담</a></li>
+                <li><a href="#x">FAQ</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#x">제품소개</a>
+              <ul>
+                <li><a href="#x">스마트폰</a></li>
+                <li><a href="#x">태블릿</a></li>
+                <li><a href="#x">워치</a></li>
+                <li><a href="#x">버즈</a></li>
+              </ul>
+            </li>
+          </ul>
         </div>
         <div class="copyright">
-            <p>Copyright © 2020 Galaxy All Rights Reserved.</p>
+          Copyright © 2020 Galaxy All Rights Reserved.
         </div>
       </div>
     </div>
