--- a/index.html
+++ b/index.html
@@ -49,22 +49,24 @@
         <ul class="product_01">
           <li>
             <div class="photo">
-              <img src="images/watch.png" alt="watch" />
+              <img class="first" src="images/watch.png" alt="watch" />
+              <img class="second" src="images/watch-ov.png" alt="watch" />
             </div>
             <div class="detail">
               <h3>Watch</h3>
               <p>보다 완벽해진 스마트 헬스케어 워치</p>
-              <button>자세히 보기</button>
+              <button class="btn small">자세히 보기</button>
             </div>
           </li>
           <li>
             <div class="photo">
-              <img src="images/buds.png" alt="buds" />
+              <img class="first" src="images/buds.png" alt="buds" />
+              <img class="second" src="images/buds-ov.png" alt="buds" />
             </div>
             <div class="detail">
               <h3>Buds</h3>
               <p>처음 만나는 갤럭시 오픈형 무선 이어폰</p>
-              <button>자세히 보기</button>
+              <button class="btn small">자세히 보기</button>
             </div>
           </li>
         </ul>
