--- a/index.html
+++ b/index.html
@@ -77,22 +77,39 @@
             <p>당신에게 꼭 맞는 갤럭시는?</p>
           </div>
           <ul class="items">
-            <li><img src="images/buds-ov.png" alt="" /></li>
-            <li><img src="images/watch-ov.png" alt="" /></li>
-            <li><img src="images/note-ov.png" alt="" /></li>
-            <li><img src="images/watch.png" alt="" /></li>
+            <li>
+              <img class="first" src="/images/buds-ov.png" alt="" />
+              <img class="second" src="/images/buds.png" alt="" />
+            </li>
+
+            <li>
+              <img class="first" src="/images/watch-ov.png" alt="" />
+              <img class="second" src="/images/watch.png" alt="" />
+            </li>
+
+            <li>
+              <img class="first" src="/images/note-ov.png" alt="" />
+              <img class="second" src="/images/note.png" alt="" />
+            </li>
+
+            <li>
+              <img class="first" src="/images/watch.png" alt="" />
+              <img class="second" src="/images/watch-ov.png" alt="" />
+            </li>
           </ul>
         </div>
       </div>
 
       <div class="banner">
-        <div class="center_box banner_text">
-          <h2>갤럭시 핏</h2>
-          <p>
-            수면, 심박수, 스트레스 등 다양한 데이터를 쉽게 확인하고<br />
-            파워풀 배터리로 걱정없이 오래 착용 할 수 있습니다.
-          </p>
-          <button class="btn">구매혜택보기</button>
+        <div class="center_box">
+          <div class="banner_text">
+            <h2>갤럭시 핏</h2>
+            <p>
+              수면, 심박수, 스트레스 등 다양한 데이터를 쉽게 확인하고<br />
+              파워풀 배터리로 걱정없이 오래 착용 할 수 있습니다.
+            </p>
+            <button class="btn">구매혜택보기</button>
+          </div>
         </div>
       </div>
 
@@ -120,9 +137,9 @@
             <p>당신의 삶을 변화시킬 5G</p>
           </div>
           <ul class="items">
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><img src="/images/5g_1.jpg" alt="" /></li>
+            <li><img src="/images/5g_2.jpg" alt="" /></li>
+            <li><img src="/images/5g_3.jpg" alt="" /></li>
           </ul>
         </div>
       </div>
