--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               우리가 제공하는 앱을 다운로드 해 보세요.<br />갤러시의 새로운
               소식을 빠르고 간편하게 확인 할 수 있습니다.
             </p>
-            <ul>
+            <ul class="social_icons">
               <li>
                 <a href="#x"><i class="xi-twitter"></i></a>
               </li>
@@ -193,7 +193,7 @@
             </li>
           </ul>
         </div>
-        <div class="copyright">
+        <div class="center_box copyright">
           Copyright © 2020 Galaxy All Rights Reserved.
         </div>
       </div>
