--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a>
         <ul class="nav">
           <li><a href="#x" class="on">홈</a></li>
-          <li><a href="#x">스마트폰</a></li>
+          <li><a href="/pages/phone.html">스마트폰</a></li>
           <li><a href="#x">태블릿</a></li>
           <li><a href="#x">워치</a></li>
           <li><a href="#x">버즈</a></li>
